[package]
name = "cmd_switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["env", "derive"] }
chrono = { version = "0.4.31", fetures = ["serde"] }
cid = { version = "0.10.1", features = ["serde", "serde-codec"] }
thiserror = "1.0.40"
num-bigint = { version ="0.4.4", features = ["serde"] }
mockall = "0.11.4"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread", "fs"] }
futures = "0.3"
tryhard = "0.5.1"
url = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.96"
base64 = "0.21.4"
tonic  = { version = "0.10.2", features = ["tls"] }
tonic-web = "0.10.2"
tower-http = { version = "0.4.3", features = ["trace"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
csv = "1.3.0"
http = "1.0.0"
prost = "0.12.1"
reqwest = { version = "0.11.18", features = ["json"] }
uuid = { version = "1.3.0", features = ["v4"] }
sentry-tower = { git = "https://github.com/filmineio/sentry-rust", branch = "pub-trace-id", features = ["http"]}
async-trait = "0.1.73"
termimad = "0.20"

